Fix Bitrix API: use im.dialog.messages.get for task comments
- Update getTaskComment to use im.dialog.messages.get API
- Use DIALOG_ID format: chat{chatId} for fetching messages
- Select message with maximum id (latest message) from chat
- Add chatId column migration for tasks table
- Add detailed logging for webhook requests
- Update GitHub Actions workflow to run chatId migration
- Store chatId from Bitrix tasks for comment retrieval

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -177,6 +177,10 @@ jobs:
               echo "Running add-replicate-column.sql migration..."
               cat migrations/add-replicate-column.sql | ENV_FILE=.production.env docker compose --profile production exec -T -e MYSQL_PWD="${DB_PASS}" mysql mysql -u"${DB_USER}" "${DB_NAME}" 2>&1 || echo "Warning: Migration failed (may already be applied)"
             fi
+            if [ -f migrations/add-chatid-column.sql ]; then
+              echo "Running add-chatid-column.sql migration..."
+              cat migrations/add-chatid-column.sql | ENV_FILE=.production.env docker compose --profile production exec -T -e MYSQL_PWD="${DB_PASS}" mysql mysql -u"${DB_USER}" "${DB_NAME}" 2>&1 || echo "Warning: Migration failed (may already be applied)"
+            fi
             echo "Migrations completed!"
             
             # Загружаем данные из SQL файлов, если они существуют
